Es/Antlr/EnforceParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/dev/Downloads/EnFuck/src/main/java/com/flipper/enparse\EnforceParser.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace PakExplorer.Es.Antlr; 
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class EnforceParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SINGLE_LINE_COMMENT=1, EMPTY_DELIMITED_COMMENT=2, DELIMITED_COMMENT=3, 
		WHITESPACES=4, PREPROCESS=5, AUTO=6, AUTOPTR=7, PRIVATE=8, PROTECTED=9, 
		STATIC=10, OVERRIDE=11, PROTO=12, NATIVE=13, NOTNULL=14, EVENT=15, EXTERNAL=16, 
		REF=17, REFERENCE=18, CONST=19, OUT=20, OWNED=21, INOUT=22, MODDED=23, 
		NEW=24, DELETE=25, CLASS=26, ENUM=27, EXTENSION=28, TYPEDEF=29, RETURN=30, 
		THIS=31, SUPER=32, THREAD=33, TYPE_INT=34, TYPE_FLOAT=35, TYPE_BOOL=36, 
		TYPE_STRING=37, TYPE_VECTOR=38, VOID=39, VOLATILE=40, IF=41, ELSE=42, 
		SWITCH=43, CASE=44, BREAK=45, FOR=46, FOREACH=47, WHILE=48, CONTINUE=49, 
		DEFAULT=50, SEALED=51, LOCAL=52, OPEN_BRACE=53, CLOSE_BRACE=54, OPEN_BRACKET=55, 
		CLOSE_BRACKET=56, OPEN_PARENS=57, CLOSE_PARENS=58, DOT=59, COMMA=60, COLON=61, 
		SEMICOLON=62, QMARK=63, PLUS=64, MINUS=65, DQUOTE=66, STAR=67, DIV=68, 
		PERCENT=69, AMP=70, BITWISE_OR=71, CARET=72, BANG=73, TILDE=74, ASSIGNMENT=75, 
		LT=76, GT=77, OP_INC=78, OP_DEC=79, OP_AND=80, OP_OR=81, OP_EQ=82, OP_NE=83, 
		OP_LE=84, OP_GE=85, OP_LEFTSHIFT=86, OP_RIGHTSHIFT=87, OP_ADD_ASSIGN=88, 
		OP_SUB_ASSIGN=89, OP_MULT_ASSIGN=90, OP_DIV_ASSIGN=91, OP_OR_ASSIGN=92, 
		OP_AND_ASSIGN=93, OP_LEFTSHFT_ASSIGN=94, SPACE=95, OP_RIGHTSHFT_ASSIGN=96, 
		LITERAL_STRING=97, LITERAL_INTEGER=98, LITERAL_FLOAT=99, LITERAL_BOOLEAN=100, 
		LITERAL_NULL=101, IDENTIFIER=102, REUSED_MODIFIERS=103, FUNC_MODIFIER=104, 
		FUNC_PARAM_MODIFIER=105, VARIABLE_MODIFIER=106, CLASS_MODIFIER=107, EOL=108;
	public const int
		RULE_computationalUnit = 0, RULE_variableModifier = 1, RULE_methodModifier = 2, 
		RULE_parameterModifier = 3, RULE_classModifier = 4, RULE_globalDeclaration = 5, 
		RULE_classDeclaration = 6, RULE_classOrEnumExtension = 7, RULE_typeParameters = 8, 
		RULE_typeParameter = 9, RULE_enumDeclaration = 10, RULE_enumBody = 11, 
		RULE_enumValue = 12, RULE_annotation = 13, RULE_classBody = 14, RULE_typeDeclaration = 15, 
		RULE_methodDeclaration = 16, RULE_methodBody = 17, RULE_typeTypeOrVoid = 18, 
		RULE_fieldDeclaration = 19, RULE_variableDeclarators = 20, RULE_variableDeclarator = 21, 
		RULE_variableDeclaratorId = 22, RULE_formalParameters = 23, RULE_formalParameterList = 24, 
		RULE_formalParameter = 25, RULE_formalParameterUndefined = 26, RULE_formalParameterDefined = 27, 
		RULE_variableInitializer = 28, RULE_arrayInitializer = 29, RULE_literal = 30, 
		RULE_literalBoolean = 31, RULE_literalString = 32, RULE_literalNull = 33, 
		RULE_literalNumeric = 34, RULE_literalFloat = 35, RULE_literalInteger = 36, 
		RULE_literalVector = 37, RULE_classType = 38, RULE_block = 39, RULE_blockStatement = 40, 
		RULE_statement = 41, RULE_deleteStatment = 42, RULE_threadStatment = 43, 
		RULE_ifStatement = 44, RULE_elseStatement = 45, RULE_forStatement = 46, 
		RULE_foreachStatement = 47, RULE_whileStatement = 48, RULE_switchStatement = 49, 
		RULE_switchBlockStatementGroup = 50, RULE_switchLabel = 51, RULE_forControl = 52, 
		RULE_forInit = 53, RULE_foreachControl = 54, RULE_forEachVariableList = 55, 
		RULE_forEachVariable = 56, RULE_localVariableDeclaration = 57, RULE_localVariableDeclarationRegular = 58, 
		RULE_localVariableDeclarationAssumptuative = 59, RULE_identifier = 60, 
		RULE_parExpression = 61, RULE_parameter = 62, RULE_specificParam = 63, 
		RULE_expressionList = 64, RULE_methodCall = 65, RULE_expression = 66, 
		RULE_primary = 67, RULE_creator = 68, RULE_createdName = 69, RULE_innerCreator = 70, 
		RULE_arrayCreatorRest = 71, RULE_classCreatorRest = 72, RULE_explicitGenericInvocation = 73, 
		RULE_typeArgumentsOrDiamond = 74, RULE_nonWildcardTypeArgumentsOrDiamond = 75, 
		RULE_nonWildcardTypeArguments = 76, RULE_typeList = 77, RULE_typeListChild = 78, 
		RULE_typeType = 79, RULE_primitiveType = 80, RULE_typeArguments = 81, 
		RULE_typeArgument = 82, RULE_superSuffix = 83, RULE_explicitGenericInvocationSuffix = 84, 
		RULE_arguments = 85;
	public static readonly string[] ruleNames = {
		"computationalUnit", "variableModifier", "methodModifier", "parameterModifier", 
		"classModifier", "globalDeclaration", "classDeclaration", "classOrEnumExtension", 
		"typeParameters", "typeParameter", "enumDeclaration", "enumBody", "enumValue", 
		"annotation", "classBody", "typeDeclaration", "methodDeclaration", "methodBody", 
		"typeTypeOrVoid", "fieldDeclaration", "variableDeclarators", "variableDeclarator", 
		"variableDeclaratorId", "formalParameters", "formalParameterList", "formalParameter", 
		"formalParameterUndefined", "formalParameterDefined", "variableInitializer", 
		"arrayInitializer", "literal", "literalBoolean", "literalString", "literalNull", 
		"literalNumeric", "literalFloat", "literalInteger", "literalVector", "classType", 
		"block", "blockStatement", "statement", "deleteStatment", "threadStatment", 
		"ifStatement", "elseStatement", "forStatement", "foreachStatement", "whileStatement", 
		"switchStatement", "switchBlockStatementGroup", "switchLabel", "forControl", 
		"forInit", "foreachControl", "forEachVariableList", "forEachVariable", 
		"localVariableDeclaration", "localVariableDeclarationRegular", "localVariableDeclarationAssumptuative", 
		"identifier", "parExpression", "parameter", "specificParam", "expressionList", 
		"methodCall", "expression", "primary", "creator", "createdName", "innerCreator", 
		"arrayCreatorRest", "classCreatorRest", "explicitGenericInvocation", "typeArgumentsOrDiamond", 
		"nonWildcardTypeArgumentsOrDiamond", "nonWildcardTypeArguments", "typeList", 
		"typeListChild", "typeType", "primitiveType", "typeArguments", "typeArgument", 
		"superSuffix", "explicitGenericInvocationSuffix", "arguments"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, "'auto'", "'autoptr'", "'private'", 
		"'protected'", "'static'", "'override'", "'proto'", "'native'", "'notnull'", 
		"'event'", "'external'", "'ref'", "'reference'", "'const'", "'out'", "'owned'", 
		"'inout'", "'modded'", "'new'", "'delete'", "'class'", "'enum'", "'extends'", 
		"'typedef'", "'return'", "'this'", "'super'", "'thread'", "'int'", "'float'", 
		"'bool'", "'string'", "'vector'", "'void'", "'volatile'", "'if'", "'else'", 
		"'switch'", "'case'", "'break'", "'for'", "'foreach'", "'while'", "'contine'", 
		"'default'", "'sealed'", "'local'", "'{'", "'}'", "'['", "']'", "'('", 
		"')'", "'.'", "','", "':'", "';'", "'?'", "'+'", "'-'", "'\"'", "'*'", 
		"'/'", "'%'", "'&'", "'|'", "'^'", "'!'", "'~'", "'='", "'<'", "'>'", 
		"'++'", "'--'", "'&&'", "'||'", "'=='", "'!='", "'<='", "'>='", "'<<'", 
		"'>>'", "'+='", "'-='", "'*='", "'/='", "'|='", "'&='", "'<<='", "' '", 
		"'>>='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SINGLE_LINE_COMMENT", "EMPTY_DELIMITED_COMMENT", "DELIMITED_COMMENT", 
		"WHITESPACES", "PREPROCESS", "AUTO", "AUTOPTR", "PRIVATE", "PROTECTED", 
		"STATIC", "OVERRIDE", "PROTO", "NATIVE", "NOTNULL", "EVENT", "EXTERNAL", 
		"REF", "REFERENCE", "CONST", "OUT", "OWNED", "INOUT", "MODDED", "NEW", 
		"DELETE", "CLASS", "ENUM", "EXTENSION", "TYPEDEF", "RETURN", "THIS", "SUPER", 
		"THREAD", "TYPE_INT", "TYPE_FLOAT", "TYPE_BOOL", "TYPE_STRING", "TYPE_VECTOR", 
		"VOID", "VOLATILE", "IF", "ELSE", "SWITCH", "CASE", "BREAK", "FOR", "FOREACH", 
		"WHILE", "CONTINUE", "DEFAULT", "SEALED", "LOCAL", "OPEN_BRACE", "CLOSE_BRACE", 
		"OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_PARENS", "CLOSE_PARENS", "DOT", 
		"COMMA", "COLON", "SEMICOLON", "QMARK", "PLUS", "MINUS", "DQUOTE", "STAR", 
		"DIV", "PERCENT", "AMP", "BITWISE_OR", "CARET", "BANG", "TILDE", "ASSIGNMENT", 
		"LT", "GT", "OP_INC", "OP_DEC", "OP_AND", "OP_OR", "OP_EQ", "OP_NE", "OP_LE", 
		"OP_GE", "OP_LEFTSHIFT", "OP_RIGHTSHIFT", "OP_ADD_ASSIGN", "OP_SUB_ASSIGN", 
		"OP_MULT_ASSIGN", "OP_DIV_ASSIGN", "OP_OR_ASSIGN", "OP_AND_ASSIGN", "OP_LEFTSHFT_ASSIGN", 
		"SPACE", "OP_RIGHTSHFT_ASSIGN", "LITERAL_STRING", "LITERAL_INTEGER", "LITERAL_FLOAT", 
		"LITERAL_BOOLEAN", "LITERAL_NULL", "IDENTIFIER", "REUSED_MODIFIERS", "FUNC_MODIFIER", 
		"FUNC_PARAM_MODIFIER", "VARIABLE_MODIFIER", "CLASS_MODIFIER", "EOL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "EnforceParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static EnforceParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public EnforceParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public EnforceParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ComputationalUnitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(EnforceParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public GlobalDeclarationContext[] globalDeclaration() {
			return GetRuleContexts<GlobalDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalDeclarationContext globalDeclaration(int i) {
			return GetRuleContext<GlobalDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclarationContext[] typeDeclaration() {
			return GetRuleContexts<TypeDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclarationContext typeDeclaration(int i) {
			return GetRuleContext<TypeDeclarationContext>(i);
		}
		public ComputationalUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_computationalUnit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.EnterComputationalUnit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.ExitComputationalUnit(this);
		}
	}

	[RuleVersion(0)]
	public ComputationalUnitContext computationalUnit() {
		ComputationalUnitContext _localctx = new ComputationalUnitContext(Context, State);
		EnterRule(_localctx, 0, RULE_computationalUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 176;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AUTOPTR) | (1L << PRIVATE) | (1L << PROTECTED) | (1L << STATIC) | (1L << OVERRIDE) | (1L << PROTO) | (1L << NATIVE) | (1L << NOTNULL) | (1L << EVENT) | (1L << EXTERNAL) | (1L << REF) | (1L << REFERENCE) | (1L << CONST) | (1L << OWNED) | (1L << MODDED) | (1L << CLASS) | (1L << ENUM) | (1L << TYPEDEF) | (1L << TYPE_INT) | (1L << TYPE_FLOAT) | (1L << TYPE_BOOL) | (1L << TYPE_STRING) | (1L << TYPE_VECTOR) | (1L << VOID) | (1L << VOLATILE) | (1L << SEALED) | (1L << LOCAL) | (1L << OPEN_BRACKET) | (1L << SEMICOLON))) != 0) || _la==IDENTIFIER) {
				{
				State = 174;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 172;
					globalDeclaration();
					}
					break;
				case 2:
					{
					State = 173;
					typeDeclaration();
					}
					break;
				}
				}
				State = 178;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 179;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableModifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRIVATE() { return GetToken(EnforceParser.PRIVATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROTECTED() { return GetToken(EnforceParser.PROTECTED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STATIC() { return GetToken(EnforceParser.STATIC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AUTOPTR() { return GetToken(EnforceParser.AUTOPTR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROTO() { return GetToken(EnforceParser.PROTO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REF() { return GetToken(EnforceParser.REF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REFERENCE() { return GetToken(EnforceParser.REFERENCE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONST() { return GetToken(EnforceParser.CONST, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TYPEDEF() { return GetToken(EnforceParser.TYPEDEF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOTNULL() { return GetToken(EnforceParser.NOTNULL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OWNED() { return GetToken(EnforceParser.OWNED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOCAL() { return GetToken(EnforceParser.LOCAL, 0); }
		public VariableModifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableModifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.EnterVariableModifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.ExitVariableModifier(this);
		}
	}

	[RuleVersion(0)]
	public VariableModifierContext variableModifier() {
		VariableModifierContext _localctx = new VariableModifierContext(Context, State);
		EnterRule(_localctx, 2, RULE_variableModifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 181;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AUTOPTR) | (1L << PRIVATE) | (1L << PROTECTED) | (1L << STATIC) | (1L << PROTO) | (1L << NOTNULL) | (1L << REF) | (1L << REFERENCE) | (1L << CONST) | (1L << OWNED) | (1L << TYPEDEF) | (1L << LOCAL))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MethodModifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRIVATE() { return GetToken(EnforceParser.PRIVATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROTECTED() { return GetToken(EnforceParser.PROTECTED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOTNULL() { return GetToken(EnforceParser.NOTNULL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STATIC() { return GetToken(EnforceParser.STATIC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OVERRIDE() { return GetToken(EnforceParser.OVERRIDE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROTO() { return GetToken(EnforceParser.PROTO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NATIVE() { return GetToken(EnforceParser.NATIVE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REF() { return GetToken(EnforceParser.REF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VOLATILE() { return GetToken(EnforceParser.VOLATILE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXTERNAL() { return GetToken(EnforceParser.EXTERNAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EVENT() { return GetToken(EnforceParser.EVENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OWNED() { return GetToken(EnforceParser.OWNED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEALED() { return GetToken(EnforceParser.SEALED, 0); }
		public MethodModifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_methodModifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.EnterMethodModifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.ExitMethodModifier(this);
		}
	}

	[RuleVersion(0)]
	public MethodModifierContext methodModifier() {
		MethodModifierContext _localctx = new MethodModifierContext(Context, State);
		EnterRule(_localctx, 4, RULE_methodModifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 183;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRIVATE) | (1L << PROTECTED) | (1L << STATIC) | (1L << OVERRIDE) | (1L << PROTO) | (1L << NATIVE) | (1L << NOTNULL) | (1L << EVENT) | (1L << EXTERNAL) | (1L << REF) | (1L << OWNED) | (1L << VOLATILE) | (1L << SEALED))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
